--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,15 +21,18 @@
 title: Philippe Bonnet - Home Page 
 email: bonnet@di.ku.dk 
 description: >- # this means to ignore newlines until "baseurl:"
-  Philippe Bonnet's home page
+  Philippe's home page
 baseurl: "/docs" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: bonnet-p 
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+#theme: minimal
+#plugins:
+#  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
