--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Philippe Bonnet - Home Page 
+title: Philippe Bonnet
 email: bonnet@di.ku.dk 
 description: >- # this means to ignore newlines until "baseurl:"
-  Philippe's home page
+  Home Page
 baseurl: "/docs" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: bonnet-p 
