--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,6 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/docs" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: bonnet-p 
+logo: /assets/images/bonnet.jpg
 
 # Build settings
 remote_theme: pages-themes/minimal@v0.2.0
