--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Philippe Bonnet 
-logo: /assets/img/bonnet.png
+logo: /assets/img/bonnet.jpg
 description: Home @ DIKU 
 show_downloads: false 
 google_analytics:
